fixed 'click on me to...' error

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -41,6 +41,8 @@ body {
 
 .diary {
     margin-top: 3px;
+    padding-right: 2vw;
+    padding-right: 2vw;
     width: 90vw;
     background-color: white;
     display: block;
